--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,11 @@
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_configured=true
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=true
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_configured=true
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=
 auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_create_2e_tests=false
 auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_enabled=false
 auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_path=
@@ -20,4 +28,4 @@ tags.asp=false
 tags.short=false
 test.src.dir=${file.reference.core-laravel-tests}
 testing.providers=PhpUnit
-web.root=.
+web.root=public
